--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "recharts": "^2.15.1",
     "sonner": "^2.0.2",
     "tailwind-merge": "^3.0.2",
+    "terser": "^5.43.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
